<resources>
    <string name="app_name">ProjectManager</string>
    <string name="dashboard">Dashboard</string>
    <string name="detail_view_title_project">Projekt Info</string>
    <string name="detail_view_title_customer">Kunde Info</string>
    <string name="text_customer">Kunden</string>
    <string name="omNew">Neuer Eintrag</string>
    <string name="it_Name">Name</string>
    <string name="itAddress">Adresse</string>
    <string name="itContact">Kontaktperson</string>
    <string name="itEmail">E-Mail</string>
    <string name="itPhone">Telefon</string>
    <string name="cmDelete">Löschen</string>
    <string name="cmEdit">Bearbeiten</string>
    <string name="txtProjectCreatedOn">Erstellt am:</string>
    <string name="txtProjectFinshed">Erledigt am:</string>
    <string name="txtTimerHint">Gesamte Arbeitszeit</string>
    <string name="it_Project_Title">Projekttitel</string>
    <string name="it_Project_Customer">Auftraggeber</string>
    <string name="itDescription">Beschreibung</string>
    <string name="EndStopClock">Zeiterfassung beenden</string>
    <string name="projectDescription">Projektbeschreibung</string>
    <string name="text_projects">Projekte</string>
    <string name="text_projects_all">Alle Projekte</string>
    <string name="text_overview_task">Zeiterfassungen</string>
    <string name="text_new_task">Neue Zeiterfassung</string>
    <string name="projectOverview">Projektübersicht</string>
    <string name="alert_title_new_customer">Neuen Kunden anlegen</string>
    <string name="alert_title_edit_customer">Kunde bearbeiten</string>
    <string name="alert_title_new_project">Neues Projekt anlegen</string>
    <string name="alert_title_edit_project">Projekt bearbeiten</string>
    <string name="alert_message_delete_customer">Kunde und alle zugehörigen Projekte entfernen?</string>
    <string name="alert_message_delete_projekt">Projekt und alle zugehörigen Zeiten entfernen?</string>
    <string name="alert_message_check_projekt">Wollen Sie das Projekt als erledigt markieren?</string>
    <string name="alert_message_uncheck_projekt">Wollen Sie das Projekt als nicht-erledigt markieren?</string>
    <string name="omCheckProject">Status ändern</string>
    <string name="alert_message_delete_task">Wollen Sie diese Zeiterfassung löschen?</string>
    <string name="settingsOnlyUndone">Erledigte Projekte ausblenden</string>
    <string name="settingsReadPhone">Timer bei aktivem Anruf pausieren</string>
    <string name="settingsTitle">Einstellungen</string>
</resources>