<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dim_margin_default"
        android:paddingEnd="@dimen/dim_margin_default">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/it_Name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/itAddress"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCustomerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/itContact"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCustomerContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/itEmail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCustomerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/itPhone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCustomerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp" />
    </LinearLayout>
</ScrollView>