<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dim_margin_default"
        android:paddingEnd="@dimen/dim_margin_default">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/it_Project_Title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/it_Project_Customer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/ddCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txtDialog_height"
            android:gravity="bottom"
            android:text="@string/itDescription"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etProjectDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />
    </LinearLayout>
</ScrollView>